--- a/index.html
+++ b/index.html
@@ -86,27 +86,45 @@
             background-color: #f9f9f9;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            display: flex;
+            flex-direction: column;
+            height: 500px;
+        }
+
+        .table-scroll-container {
+            flex: 1;
+            overflow-y: auto;
+            margin-top: 10px;
+            position: relative;
         }
 
         table {
             width: 100%;
             border-collapse: collapse;
-            margin-bottom: 20px;
+            margin-bottom: 0;
         }
 
-        th,
-        td {
-            border: 1px solid #ddd;
-            padding: 8px;
-            text-align: left;
+        thead {
+            position: sticky;
+            top: 0;
+            z-index: 1;
+            background-color: #4CAF50;
         }
 
         th {
             background-color: #4CAF50;
             color: white;
+            position: sticky;
+            top: 0;
+            padding: 12px 8px;
         }
 
-        tr:nth-child(even) {
+        td {
+            padding: 8px;
+            border: 1px solid #ddd;
+        }
+
+        tbody tr:nth-child(even) {
             background-color: #f2f2f2;
         }
 
@@ -120,6 +138,18 @@
 
         .copy-btn:hover {
             background-color: #5a6268;
+        }
+
+        .table-header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            margin-bottom: 10px;
+        }
+
+        .table-actions {
+            display: flex;
+            gap: 10px;
         }
 
         @media screen and (max-width: 768px) {
@@ -182,7 +212,7 @@
                 </div>
 
                 <div class="tables-wrapper">
-                    <div class="table-container">
+                    <div class="table-container" style="height: 300px;">
                         <h2>Tài khoản F8BET</h2>
                         <table id="f8betTable">
                             <thead>
@@ -197,23 +227,26 @@
                     </div>
 
                     <div class="table-container">
-                        <div class="" style="display: flex; align-items: center; justify-content: space-between;">
+                        <div class="table-header">
                             <h2>Tài khoản đã lấy từ API</h2>
                             <div class="table-actions">
                                 <button onclick="deleteAllApiAccounts()" class="delete-all-btn">Xóa tất cả</button>
                             </div>
                         </div>
-                        <table id="apiAccountsTable">
-                            <thead>
-                                <tr>
-                                    <th>Username</th>
-                                    <th>Password</th>
-                                    <th>Thời gian tạo</th>
-                                    <th>Hành động</th>
-                                </tr>
-                            </thead>
-                            <tbody></tbody>
-                        </table>
+                        <div class="table-scroll-container">
+                            <table id="apiAccountsTable">
+                                <thead>
+                                    <tr>
+                                        <th>Tài khoản</th>
+                                        <th>Mật khẩu</th>
+                                        <th>Thời gian tạo</th>
+                                        <th>Trạng thái</th>
+                                        <th>Hành động</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
