--- a/index.html
+++ b/index.html
@@ -267,15 +267,15 @@
                     <form id="f8betForm">
                         <div class="form-group">
                             <label for="f8bet_account">Tên tài khoản:</label>
-                            <input type="text" id="f8bet_account" name="_account" required>
+                            <input type="text" id="f8bet_account" name="_account">
                         </div>
                         <div class="form-group">
                             <label for="f8bet_pat">PAT:</label>
-                            <input type="text" id="f8bet_pat" name="_pat" required>
+                            <input type="text" id="f8bet_pat" name="_pat">
                         </div>
                         <div class="form-group">
                             <label for="f8bet_prt">PRT:</label>
-                            <input type="text" id="f8bet_prt" name="_prt" required>
+                            <input type="text" id="f8bet_prt" name="_prt">
                         </div>
                         <div class="form-actions">
                             <button type="button" onclick="addAccountToList()" class="add-account-btn">Thêm vào danh sách</button>
