--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            max-width: 1200px;
-            margin: 20px auto;
-            padding: 20px;
         }
 
         .container {
             display: flex;
-            justify-content: space-between;
-            gap: 40px;
-            flex-wrap: wrap;
+            flex-direction: column;
+            align-items: center;
         }
 
         .form-section {
@@ -26,19 +22,25 @@
         }
 
         .form-container {
-            align-items: center;
             display: flex;
-            flex-wrap: wrap;
+            flex-direction: column;
+            gap: 30px;
+        }
+
+        .top-row {
+            display: flex;
             gap: 30px;
         }
 
         .form-wrapper {
-            flex: 1;
+
             min-width: 300px;
+            max-height: 400px;
+            overflow-y: auto;
         }
 
         .tables-wrapper {
-            flex: 2;
+            flex: 1;
             min-width: 400px;
             display: flex;
             flex-direction: column;
@@ -46,29 +48,31 @@
         }
 
         .form-group {
-            margin-bottom: 15px;
+            margin-bottom: 10px;
         }
 
         label {
             display: block;
-            margin-bottom: 5px;
+            margin-bottom: 3px;
+            font-size: 0.9em;
         }
 
         input {
             width: 100%;
-            padding: 8px;
-            margin-bottom: 10px;
+            padding: 6px;
+            margin-bottom: 5px;
             box-sizing: border-box;
         }
 
         button {
             background-color: #4CAF50;
             color: white;
-            padding: 10px 15px;
+            padding: 8px 12px;
             border: none;
             border-radius: 4px;
             cursor: pointer;
             width: 100%;
+            font-size: 0.9em;
         }
 
         button:hover {
@@ -78,23 +82,26 @@
         h2 {
             text-align: center;
             color: #333;
+            font-size: 1.2em;
+            margin: 10px 0;
         }
 
         .table-container {
-            margin-top: 20px;
-            padding: 15px;
+
+            margin-top: 10px;
+            padding: 10px;
             background-color: #f9f9f9;
             border-radius: 5px;
             box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
             display: flex;
             flex-direction: column;
-            height: 500px;
+            height: 250px;
         }
 
         .table-scroll-container {
             flex: 1;
             overflow-y: auto;
-            margin-top: 10px;
+            margin-top: 5px;
             position: relative;
         }
 
@@ -102,10 +109,11 @@
             width: 100%;
             border-collapse: collapse;
             margin-bottom: 0;
+            font-size: 0.9em;
         }
 
         thead {
-            position: sticky;
+
             top: 0;
             z-index: 1;
             background-color: #4CAF50;
@@ -114,13 +122,13 @@
         th {
             background-color: #4CAF50;
             color: white;
-            position: sticky;
+
             top: 0;
-            padding: 12px 8px;
+            padding: 8px 6px;
         }
 
         td {
-            padding: 8px;
+            padding: 6px;
             border: 1px solid #ddd;
         }
 
@@ -129,9 +137,9 @@
         }
 
         .copy-btn {
-            padding: 2px 6px;
-            margin-left: 5px;
-            font-size: 12px;
+            padding: 2px 4px;
+            margin-left: 3px;
+            font-size: 11px;
             width: auto;
             background-color: #6c757d;
         }
@@ -144,12 +152,12 @@
             display: flex;
             align-items: center;
             justify-content: space-between;
-            margin-bottom: 10px;
+            margin-bottom: 5px;
         }
 
         .table-actions {
             display: flex;
-            gap: 10px;
+            gap: 8px;
         }
 
         @media screen and (max-width: 768px) {
@@ -163,7 +171,7 @@
                 gap: 20px;
             }
 
-            .form-container {
+            .top-row {
                 flex-direction: column;
             }
 
@@ -176,26 +184,26 @@
 
             input,
             button {
-                padding: 12px 8px;
+                padding: 10px 6px;
             }
 
             h2 {
-                font-size: 1.5em;
+                font-size: 1.2em;
             }
         }
 
         .account-entry {
             border: 1px solid #ddd;
-            padding: 15px;
-            margin-bottom: 15px;
+            padding: 10px;
+            margin-bottom: 10px;
             border-radius: 5px;
             position: relative;
         }
 
         .form-actions {
             display: flex;
-            gap: 10px;
-            margin-top: 15px;
+            gap: 8px;
+            margin-top: 10px;
         }
 
         .add-account-btn {
@@ -204,10 +212,10 @@
 
         .remove-account {
             position: absolute;
-            top: 10px;
-            right: 10px;
+            top: 8px;
+            right: 8px;
             background-color: #dc3545;
-            padding: 5px 10px;
+            padding: 4px 8px;
             width: auto;
         }
 
@@ -216,21 +224,21 @@
         }
 
         .accounts-list {
-            margin-top: 15px;
-            max-height: 200px;
+            margin-top: 10px;
+            max-height: 150px;
             overflow-y: auto;
             border: 1px solid #ddd;
             border-radius: 5px;
-            padding: 10px;
+            padding: 8px;
         }
 
         .account-item {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            padding: 8px;
+            padding: 6px;
             border-bottom: 1px solid #eee;
-            font-size: 14px;
+            font-size: 13px;
         }
 
         .account-item:last-child {
@@ -245,27 +253,27 @@
             background-color: #dc3545;
             color: white;
             border: none;
-            padding: 4px 8px;
+            padding: 3px 6px;
             border-radius: 3px;
             cursor: pointer;
-            font-size: 12px;
-            margin-left: 10px;
+            font-size: 11px;
+            margin-left: 8px;
         }
 
         .remove-account-item:hover {
             background-color: #c82333;
         }
 
-        .reload-btn {
+        .reload-btn ,.reload-btn-j88{
             background-color: #2196F3;
-            margin-right: 10px;
+            margin-right: 8px;
         }
 
         .reload-btn:hover {
             background-color: #1976D2;
         }
 
-        .delete-used-btn {
+        .delete-used-btn ,.delete-used-btn-j88{
             background-color: #dc3545;
         }
 
@@ -280,53 +288,56 @@
         <div class="form-section">
             <h2>F8BET</h2>
             <div class="form-container">
-                <div class="form-wrapper">
-                    <form id="f8betForm">
-                        <div class="form-group">
-                            <label for="f8bet_account">Tên tài khoản:</label>
-                            <input type="text" id="f8bet_account" name="_account">
-                        </div>
-                        <div class="form-group">
-                            <label for="f8bet_pat">PAT:</label>
-                            <input type="text" id="f8bet_pat" name="_pat">
-                        </div>
-                        <div class="form-group">
-                            <label for="f8bet_prt">PRT:</label>
-                            <input type="text" id="f8bet_prt" name="_prt">
-                        </div>
-                        <div class="form-actions">
-                            <button type="button" onclick="addAccountToList()" class="add-account-btn">Thêm vào danh sách</button>
-                            <button type="submit">Gửi tất cả</button>
-                        </div>
-                        <div id="accounts-list" class="accounts-list">
-                            <!-- Danh sách tài khoản sẽ được thêm vào đây -->
-                        </div>
-                    </form>
-                    <button id="fetchAccountsBtn" style="margin-top: 20px; background-color: #2196F3;">Lấy tài khoản
-                        mới</button>
-                </div>
+                <div class="top-row">
+                    <div class="form-wrapper">
+                        <form id="f8betForm">
+                            <div class="form-group">
+                                <label for="f8bet_account">Tên tài khoản:</label>
+                                <input type="text" id="f8bet_account" name="_account">
+                            </div>
+                            <div class="form-group">
+                                <label for="f8bet_pat">PAT:</label>
+                                <input type="text" id="f8bet_pat" name="_pat">
+                            </div>
+                            <div class="form-group">
+                                <label for="f8bet_prt">PRT:</label>
+                                <input type="text" id="f8bet_prt" name="_prt">
+                            </div>
+                            <div class="form-actions">
+                                <button type="button" onclick="addAccountToList()" class="add-account-btn">Thêm vào danh
+                                    sách</button>
+                                <button type="submit">Gửi tất cả</button>
+                            </div>
+                            <div id="accounts-list" class="accounts-list">
+                                <!-- Danh sách tài khoản sẽ được thêm vào đây -->
+                            </div>
+                        </form>
 
-                <div class="tables-wrapper">
-                    <div class="table-container" style="height: 300px;">
-                        <h2>Tài khoản F8BET</h2>
+                    </div>
+
+                    <div class="table-container">
+                        <h2 >Tài khoản F8BET</h2>
                         <table id="f8betTable">
                             <thead>
                                 <tr>
                                     <th>Tài khoản</th>
-                                    <th>Trạng thái đóng băng</th>
-                                    <th>Trạng thái vô hiệu hóa</th>
+                                    <th>Đóng băng</th>
+                                    <th>Vô hiệu hóa</th>
                                 </tr>
                             </thead>
                             <tbody></tbody>
                         </table>
                     </div>
-
                     <div class="table-container">
                         <div class="table-header">
-                            <h2>Tài khoản đã lấy từ API</h2>
+                            <h2 style="margin-right: 5px;">Get TK F8bet</h2>
                             <div class="table-actions">
+                                <button id=" background-color: #2196F3;">Lấy
+                                    tài khoản
+                                    mới</button>
                                 <button onclick="reloadApiAccounts()" class="reload-btn">Tải lại</button>
-                                <button onclick="deleteUsedApiAccounts()" class="delete-used-btn">Xóa tài khoản đã sử dụng</button>
+                                <button onclick="deleteUsedApiAccounts()" class="delete-used-btn">Xóa tài khoản đã sử
+                                    dụng</button>
                             </div>
                         </div>
                         <div class="table-scroll-container">
@@ -335,7 +346,7 @@
                                     <tr>
                                         <th>Tài khoản</th>
                                         <th>Mật khẩu</th>
-                                        <th>Thời gian tạo</th>
+
                                         <th>Trạng thái</th>
                                         <th>Hành động</th>
                                     </tr>
@@ -345,6 +356,83 @@
                         </div>
                     </div>
                 </div>
+
+
+            </div>
+        </div>
+
+        <div class="form-section">
+            <h2>J88</h2>
+            <div class="form-container">
+                <div class="top-row">
+                    <div class="form-wrapper">
+                        <form id="j88Form">
+                            <div class="form-group">
+                                <label for="j88_account">Tên tài khoản:</label>
+                                <input type="text" id="j88_account" name="_account">
+                            </div>
+                            <div class="form-group">
+                                <label for="j88_pat">PAT:</label>
+                                <input type="text" id="j88_pat" name="_pat">
+                            </div>
+                            <div class="form-group">
+                                <label for="j88_prt">PRT:</label>
+                                <input type="text" id="j88_prt" name="_prt">
+                            </div>
+                            <div class="form-actions">
+                                <button type="button" onclick="addAccountToListJ88()" class="add-account-btn">Thêm vào
+                                    danh sách</button>
+                                <button type="submit">Gửi tất cả</button>
+                            </div>
+                            <div id="accounts-list-j88" class="accounts-list">
+                                <!-- Danh sách tài khoản sẽ được thêm vào đây -->
+                            </div>
+                        </form>
+                     
+                    </div>
+
+                    <div class="table-container">
+                        <h2>Tài khoản J88</h2>
+                        <table id="j88Table">
+                            <thead>
+                                <tr>
+                                    <th>Tài khoản</th>
+                                    <th>Đóng băng</th>
+                                    <th>Vô hiệu hóa</th>
+                                </tr>
+                            </thead>
+                            <tbody></tbody>
+                        </table>
+                    </div>
+                    <div class="table-container" style="width:  400px;">
+                        <div class="table-header">
+                            <h2 style="margin-right: 5px;">Get TK J88</h2>
+                            <div class="table-actions">
+                                <button id="fetchAccountsBtnJ88">Lấy tài
+                                    khoản mới</button>
+                                <button onclick="reloadApiAccountsJ88()" class="reload-btn-j88">Tải lại</button>
+                                <button onclick="deleteUsedApiAccountsJ88()" class="delete-used-btn-j88">Xóa tài khoản
+                                    đã sử dụng</button>
+                            </div>
+                        </div>
+                        <div class="table-scroll-container">
+                            <table id="apiAccountsTableJ88">
+                                <thead>
+                                    <tr>
+                                        <th>Tài khoản</th>
+                                        <th>Mật khẩu</th>
+
+                                        <th>Trạng thái</th>
+                                        <th>Hành động</th>
+                                    </tr>
+                                </thead>
+                                <tbody></tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
