--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
         .form-group {
             margin-bottom: 10px;
-        }
+        }   
 
         label {
             display: block;
@@ -404,7 +404,7 @@
                             <tbody></tbody>
                         </table>
                     </div>
-                    <div class="table-container" style="width:  400px;">
+                    <div class="table-container">
                         <div class="table-header">
                             <h2 style="margin-right: 5px;">Get TK J88</h2>
                             <div class="table-actions">
