--- a/index.html
+++ b/index.html
@@ -332,9 +332,7 @@
                         <div class="table-header">
                             <h2 style="margin-right: 5px;">Get TK F8bet</h2>
                             <div class="table-actions">
-                                <button id=" background-color: #2196F3;">Lấy
-                                    tài khoản
-                                    mới</button>
+                                <button id="fetchAccountsBtn" style="background-color: #2196F3;">Lấy tài khoản mới</button>
                                 <button onclick="reloadApiAccounts()" class="reload-btn">Tải lại</button>
                                 <button onclick="deleteUsedApiAccounts()" class="delete-used-btn">Xóa tài khoản đã sử
                                     dụng</button>
